--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,11 @@ jobs:
         run: npx projen bump
       - name: Build
         run: npx projen build
-      - name: Push changes
+      - name: Push commits
+        run: git push origin $BRANCH
+        env:
+          BRANCH: ${{ github.ref }}
+      - name: Push tags
         run: git push --follow-tags origin $BRANCH
         env:
           BRANCH: ${{ github.ref }}
