--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
   "peerDependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
+    "@aws-cdk/custom-resources": "^1.73.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
-    "@aws-cdk/core": "^1.73.0"
+    "@aws-cdk/core": "^1.73.0",
+    "@aws-cdk/custom-resources": "^1.73.0"
   },
   "bundledDependencies": [],
   "keywords": [
