--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -88,6 +88,9 @@
         },
         {
           "spawn": "package"
+        },
+        {
+          "exec": "esbuild src/lambda/index.ts --bundle --platform=node --target=node12 --external:aws-sdk --outfile=src/lambda/build/index.js"
         }
       ]
     },
