--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
+    "jest": "26.6.3",
     "jest-junit": "^12",
     "jsii": "^1.20.1",
     "jsii-diff": "^1.20.1",
@@ -59,7 +59,8 @@
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
-    "@aws-cdk/custom-resources": "^1.73.0"
+    "@aws-cdk/custom-resources": "^1.73.0",
+    "@types/aws-lambda": "^8.10.72"
   },
   "bundledDependencies": [],
   "keywords": [
