--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
     "@aws-cdk/custom-resources": "^1.73.0",
-    "@types/aws-lambda": "^8.10.72"
+    "@types/aws-lambda": "^8.10.72",
+    "@types/cfn-response": "^1.0.4",
+    "cfn-response": "^1.0.1"
   },
   "bundledDependencies": [],
   "keywords": [
