--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.73.0",
+    "@types/aws-lambda": "^8.10.72",
+    "@types/cfn-response": "^1.0.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -60,11 +62,11 @@
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
     "@aws-cdk/custom-resources": "^1.73.0",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/cfn-response": "^1.0.4",
     "cfn-response": "^1.0.1"
   },
-  "bundledDependencies": [],
+  "bundledDependencies": [
+    "cfn-response"
+  ],
   "keywords": [
     "cdk"
   ],
