chore: Update project config to support rewire tests

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -53,6 +53,9 @@
       "steps": [
         {
           "exec": "tsc --noEmit --project tsconfig.jest.json"
+        },
+        {
+          "exec": "npx projen compile"
         }
       ]
     },
