--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cfn-response": "^1.0.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
+    "@types/rewire": "^2.5.28",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.19.0",
@@ -48,6 +49,7 @@
     "jsii-pacmak": "^1.20.1",
     "json-schema": "^0.3.0",
     "projen": "^0.16.42",
+    "rewire": "^5.0.0",
     "standard-version": "^9",
     "ts-jest": "^26.5.0",
     "typescript": "^3.9.5"
