chore: Only compile the project, no need to docgen

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -55,7 +55,7 @@
           "exec": "tsc --noEmit --project tsconfig.jest.json"
         },
         {
-          "exec": "npx projen compile"
+          "exec": "jsii --silence-warnings=reserved-word --no-fix-peer-dependencies"
         }
       ]
     },
