--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
   },
   "peerDependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
+    "@aws-cdk/aws-secretsmanager": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
     "@aws-cdk/custom-resources": "^1.73.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
+    "@aws-cdk/aws-secretsmanager": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
     "@aws-cdk/custom-resources": "^1.73.0",
     "cfn-response": "^1.0.1"
