--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/rewire": "^2.5.28",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "crypto": "^1.0.1",
     "eslint": "^7.19.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -63,12 +64,9 @@
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/aws-lambda": "^1.73.0",
-    "@aws-cdk/core": "^1.73.0",
-    "cfn-response": "^1.0.1"
+    "@aws-cdk/core": "^1.73.0"
   },
-  "bundledDependencies": [
-    "cfn-response"
-  ],
+  "bundledDependencies": [],
   "keywords": [
     "cdk"
   ],
