feat: Adding Custom Resource for the SMTP Password

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -43,6 +43,12 @@
         },
         {
           "spawn": "docgen"
+        },
+        {
+          "exec": "cp -R src/lambda lib/"
+        },
+        {
+          "exec": "cp -R src/crypto.zip lib/"
         }
       ]
     },
