--- a/package.json
+++ b/package.json
@@ -30,15 +30,18 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.73.0",
+    "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
+    "@types/rewire": "^2.5.28",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "crypto": "^1.0.1",
     "eslint": "^7.19.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
+    "jest": "26.6.3",
     "jest-junit": "^12",
     "jsii": "^1.20.1",
     "jsii-diff": "^1.20.1",
@@ -46,17 +49,20 @@
     "jsii-pacmak": "^1.20.1",
     "json-schema": "^0.3.0",
     "projen": "^0.16.42",
+    "rewire": "^5.0.0",
     "standard-version": "^9",
     "ts-jest": "^26.5.0",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
+    "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/core": "^1.73.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.73.0",
+    "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/core": "^1.73.0"
   },
   "bundledDependencies": [],
@@ -81,10 +87,12 @@
     ],
     "coverageDirectory": "coverage",
     "coveragePathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "/test/utils/"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "/test/utils/"
     ],
     "watchPathIgnorePatterns": [
       "/node_modules/"
