--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsii-docgen": "^1.8.36",
     "jsii-pacmak": "^1.20.1",
     "json-schema": "^0.3.0",
+    "nock": "^13.0.11",
     "projen": "^0.16.42",
     "rewire": "^5.0.0",
     "standard-version": "^9",
