--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -71,7 +71,7 @@
           "spawn": "test:compile"
         },
         {
-          "exec": "jest --passWithNoTests --all"
+          "exec": "jest --passWithNoTests --all --updateSnapshot"
         },
         {
           "spawn": "eslint"
