--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .jsii
 .nyc_output
 .yarn-integrity
+/.changelog.tmp.md
 /coverage
 /dist
 /lib
@@ -30,10 +31,10 @@ tsconfig.json
 yarn-debug.log*
 yarn-error.log*
 !/.eslintrc.json
+!/.gitattributes
 !/.github/dependabot.yml
 !/.github/pull_request_template.md
 !/.github/workflows/build.yml
-!/.github/workflows/rebuild-bot.yml
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.npmignore
@@ -48,4 +49,3 @@ yarn-error.log*
 !/test
 !/tsconfig.eslint.json
 !/tsconfig.jest.json
-!version.json
