chore: Upgrade Projen to v0.20.11 (#193)

--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
     "url": "https://github.com/sentialabs/halloumi-ses-user.git"
   },
   "scripts": {
-    "projen": "npx projen",
-    "start": "npx projen start",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
-    "bump": "npx projen bump",
-    "release": "npx projen release",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "projen:upgrade": "npx projen projen:upgrade",
+    "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
+    "upgrade-projen": "npx projen upgrade-projen",
+    "default": "npx projen default",
     "watch": "npx projen watch",
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "docgen": "npx projen docgen",
-    "compat": "npx projen compat"
+    "compat": "npx projen compat",
+    "projen": "npx projen",
+    "start": "npx projen start"
   },
   "author": {
     "name": "Sentia",
@@ -48,7 +49,8 @@
     "jsii-pacmak": "^1.20.1",
     "json-schema": "^0.3.0",
     "nock": "^13.0.11",
-    "projen": "^0.16.42",
+    "npm-check-updates": "^11",
+    "projen": "^0.20.11",
     "rewire": "^5.0.0",
     "standard-version": "^9",
     "ts-jest": "^26.5.0",
