feat(core): Improving the upgrade process

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@
 .eslintcache
 .jsii
 .nyc_output
+.vscode/
 .yarn-integrity
+/.changelog.tmp.md
 /coverage
 /dist
-/dist/changelog.md
-/dist/version.txt
 /lib
 /test-reports/
 build/Release
@@ -33,17 +33,17 @@ yarn-debug.log*
 yarn-error.log*
 !/.eslintrc.json
 !/.gitattributes
-!/.github/dependabot.yml
 !/.github/pull_request_template.md
 !/.github/workflows/build.yml
 !/.github/workflows/release.yml
-!/.github/workflows/stale.yml
+!/.github/workflows/upgrade-dependencies.yml
 !/.github/workflows/upgrade-projen.yml
 !/.mergify.yml
 !/.npmignore
 !/.projen/deps.json
 !/.projen/tasks.json
 !/.projenrc.js
+!/.versionrc.json
 !/API.md
 !/LICENSE
 !/package.json
