--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -2,6 +2,7 @@
   "tasks": {
     "clobber": {
       "name": "clobber",
+      "category": "30.maintain",
       "description": "hard resets to HEAD of origin and cleans the local repo",
       "env": {
         "BRANCH": "$(git branch --show-current)"
@@ -34,6 +35,7 @@
     },
     "compile": {
       "name": "compile",
+      "category": "00.build",
       "description": "Only compile",
       "steps": [
         {
@@ -49,6 +51,7 @@
     },
     "test:compile": {
       "name": "test:compile",
+      "category": "10.test",
       "description": "compiles the test code",
       "steps": [
         {
@@ -58,6 +61,7 @@
     },
     "test": {
       "name": "test",
+      "category": "10.test",
       "description": "Run tests",
       "steps": [
         {
@@ -76,6 +80,7 @@
     },
     "build": {
       "name": "build",
+      "category": "00.build",
       "description": "Full release build (test+compile)",
       "steps": [
         {
@@ -89,11 +94,15 @@
         },
         {
           "spawn": "package"
+        },
+        {
+          "spawn": "docgen"
         }
       ]
     },
     "test:watch": {
       "name": "test:watch",
+      "category": "10.test",
       "description": "Run jest in watch mode",
       "steps": [
         {
@@ -103,6 +112,7 @@
     },
     "test:update": {
       "name": "test:update",
+      "category": "10.test",
       "description": "Update jest snapshots",
       "steps": [
         {
@@ -112,26 +122,28 @@
     },
     "bump": {
       "name": "bump",
+      "category": "20.release",
       "description": "Bumps version based on latest git tag and generates a changelog entry",
       "env": {
         "OUTFILE": "package.json",
-        "CHANGELOG": "dist/changelog.md",
-        "BUMPFILE": "dist/version.txt"
+        "INITIAL_VERSION": "v0.1.0"
       },
       "steps": [
         {
-          "builtin": "release/bump-version"
+          "builtin": "release/resolve-version"
+        },
+        {
+          "exec": "npx standard-version@^9"
         }
       ],
       "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
     },
     "unbump": {
       "name": "unbump",
+      "category": "20.release",
       "description": "Restores version to 0.0.0",
       "env": {
-        "OUTFILE": "package.json",
-        "CHANGELOG": "dist/changelog.md",
-        "BUMPFILE": "dist/version.txt"
+        "OUTFILE": "package.json"
       },
       "steps": [
         {
@@ -139,15 +151,21 @@
         }
       ]
     },
-    "publish:github": {
-      "name": "publish:github",
-      "description": "Publish this package to GitHub Releases",
-      "requiredEnv": [
-        "GITHUB_TOKEN"
-      ],
+    "upgrade-dependencies": {
+      "name": "upgrade-dependencies",
+      "description": "upgrade dependencies",
+      "env": {
+        "CI": "0"
+      },
       "steps": [
         {
-          "exec": "gh release create v$(cat dist/version.txt) -R ${{ github.repository }} -F dist/changelog.md -t v$(cat dist/version.txt)"
+          "exec": "npm-check-updates --upgrade --target=minor --reject='projen' --filter='@aws-cdk/*'"
+        },
+        {
+          "exec": "yarn install --check-files"
+        },
+        {
+          "exec": "npx projen"
         }
       ]
     },
@@ -165,9 +183,6 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade projen"
-        },
-        {
           "exec": "npx projen"
         }
       ]
@@ -182,6 +197,7 @@
     },
     "watch": {
       "name": "watch",
+      "category": "00.build",
       "description": "Watch & compile in the background",
       "steps": [
         {
@@ -191,6 +207,7 @@
     },
     "package": {
       "name": "package",
+      "category": "20.release",
       "description": "Create an npm tarball",
       "steps": [
         {
@@ -200,6 +217,7 @@
     },
     "eslint": {
       "name": "eslint",
+      "category": "10.test",
       "description": "Runs eslint against the codebase",
       "steps": [
         {
@@ -207,46 +225,9 @@
         }
       ]
     },
-    "compat": {
-      "name": "compat",
-      "description": "Perform API compatibility check against latest version",
-      "steps": [
-        {
-          "exec": "jsii-diff npm:$(node -p \"require('./package.json').name\") -k --ignore-file .compatignore || (echo \"\nUNEXPECTED BREAKING CHANGES: add keys such as 'removed:constructs.Node.of' to .compatignore to skip.\n\" && exit 1)"
-        }
-      ]
-    },
-    "publish:npm": {
-      "name": "publish:npm",
-      "description": "Publish this package to npm",
-      "env": {
-        "NPM_DIST_TAG": "latest",
-        "NPM_REGISTRY": "registry.npmjs.org"
-      },
-      "requiredEnv": [
-        "NPM_TOKEN"
-      ],
-      "steps": [
-        {
-          "exec": "npx -p jsii-release@latest jsii-release-npm"
-        }
-      ]
-    },
-    "publish:pypi": {
-      "name": "publish:pypi",
-      "description": "Publish this package to PyPI",
-      "requiredEnv": [
-        "TWINE_USERNAME",
-        "TWINE_PASSWORD"
-      ],
-      "steps": [
-        {
-          "exec": "npx -p jsii-release@latest jsii-release-pypi"
-        }
-      ]
-    },
     "docgen": {
       "name": "docgen",
+      "category": "20.release",
       "description": "Generate API.md from .jsii manifest",
       "steps": [
         {
@@ -254,24 +235,13 @@
         }
       ]
     },
-    "release": {
-      "name": "release",
-      "description": "Prepare a release from \"main\" branch",
-      "env": {
-        "RELEASE": "true"
-      },
+    "compat": {
+      "name": "compat",
+      "category": "20.release",
+      "description": "Perform API compatibility check against latest version",
       "steps": [
         {
-          "exec": "rm -fr dist"
-        },
-        {
-          "spawn": "bump"
-        },
-        {
-          "spawn": "build"
-        },
-        {
-          "spawn": "unbump"
+          "exec": "jsii-diff npm:$(node -p \"require('./package.json').name\") -k --ignore-file .compatignore || (echo \"\nUNEXPECTED BREAKING CHANGES: add keys such as 'removed:constructs.Node.of' to .compatignore to skip.\n\" && exit 1)"
         }
       ]
     }
