chore(deps): upgrade projen
Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/sentialabs/halloumi-ses-user/actions/runs/1134463908

------

*Automatically created by projen via the "upgrade-projen" workflow*

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@
 .nyc_output
 .vscode/
 .yarn-integrity
-/.changelog.tmp.md
 /coverage
 /dist
+/dist/changelog.md
+/dist/version.txt
 /lib
 /test-reports/
 build/Release
@@ -36,14 +37,14 @@ yarn-error.log*
 !/.github/pull_request_template.md
 !/.github/workflows/build.yml
 !/.github/workflows/release.yml
-!/.github/workflows/upgrade-dependencies.yml
+!/.github/workflows/stale.yml
 !/.github/workflows/upgrade-projen.yml
+!/.github/workflows/upgrade.yml
 !/.mergify.yml
 !/.npmignore
 !/.projen/deps.json
 !/.projen/tasks.json
 !/.projenrc.js
-!/.versionrc.json
 !/API.md
 !/LICENSE
 !/package.json
